[gd_scene load_steps=17 format=3 uid="uid://bikhygmrsql7e"]

[ext_resource type="Material" uid="uid://bxpc8yx4xnd4" path="res://shaders/VHS_EFFECTl.tres" id="1_a70mo"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_rqn27"]
[ext_resource type="Script" path="res://scripts/command_processor.gd" id="2_83drj"]
[ext_resource type="Script" path="res://scripts/question_processor.gd" id="3_m4i5t"]
[ext_resource type="AudioStream" uid="uid://frwf5gp5ilh6" path="res://sfx/main_menu.mp3" id="4_8xgvw"]
[ext_resource type="FontFile" uid="uid://pdioo34qexc8" path="res://fonts/Retro Gaming.ttf" id="4_ikmrs"]
[ext_resource type="FontFile" uid="uid://dng1gh5wqkhof" path="res://fonts/ARCADECLASSIC.TTF" id="4_tqdc5"]
[ext_resource type="AudioStream" uid="uid://bxsgrkelht62p" path="res://sfx/incorrect_answer.mp3" id="5_1dc54"]
[ext_resource type="AudioStream" uid="uid://v68p36bnl2cp" path="res://sfx/command_sent.wav" id="5_htroi"]
[ext_resource type="Script" path="res://scripts/terminal_info.gd" id="5_t7m3m"]
[ext_resource type="Script" path="res://scripts/input_line.gd" id="8_3gkdh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86mr1"]
bg_color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvmaf"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2evc4"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_35wk5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwxb8"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqn27")

[node name="CommandSent" type="AudioStreamPlayer" parent="." groups=["commands"]]
stream = ExtResource("5_htroi")
volume_db = 1.0

[node name="IncorrectCommand" type="AudioStreamPlayer" parent="." groups=["commands"]]
stream = ExtResource("5_1dc54")
volume_db = 1.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8xgvw")
volume_db = 0.1
autoplay = true

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("2_83drj")

[node name="QuestionProcessor" type="Node" parent="."]
script = ExtResource("3_m4i5t")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_86mr1")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="TerminalInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
show_behind_parent = true
clip_children = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_lvmaf")
script = ExtResource("5_t7m3m")

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Rows/TerminalInfo"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CommandsHistory" type="VBoxContainer" parent="Background/MarginContainer/Rows/TerminalInfo/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2evc4")

[node name="InputContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="CMLChar" type="Label" parent="Background/MarginContainer/Rows/InputArea/InputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.686275, 0.282353, 1)
theme_override_fonts/font = ExtResource("4_ikmrs")
text = "@cyhst:~$"

[node name="InputLine" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_tqdc5")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxEmpty_35wk5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwxb8")
placeholder_text = "Type your commands here"
max_length = 80
caret_blink = true
caret_blink_interval = 0.6
script = ExtResource("8_3gkdh")

[node name="Vhs" type="CanvasLayer" parent="."]

[node name="VhsEffect" type="ColorRect" parent="Vhs"]
material = ExtResource("1_a70mo")
offset_right = 1914.0
offset_bottom = 972.0
color = Color(1, 1, 1, 0)

[connection signal="finished" from="BackgroundMusic" to="." method="_background_music_finished"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/InputContainer/InputLine" to="." method="command_submited"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/InputContainer/InputLine" to="Background/MarginContainer/Rows/InputArea/InputContainer/InputLine" method="enter_key_pressed"]
